todoyu core changelog

core 2.2.0 - not released yet
	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
	* Added: JS-Handling for contentItemTabs
	* Bugfix: fixed bug in preference saving
	* Feature: Removing valueless foreign records does not require confirmation anymore
	* Feature: Better support for SQL statements to update fields. Comma is now allowed in type definition (ex: DECIMAL(5,2))
	* Added: Todoyu.Form.assistDurationInput() for onblur-validation of duration input fields
	* Added: New form hook for data modification immediately before rendering (use TodoyuFormHook::registerRenderForm() for callback registration)
	* Added: global confirmation dialog for toggling of record-types with exclusive "is_preferred" attribute
	* Added: new DB query building method: Todoyu::db()->buildInArrayQuery()
	* Added: General content item inline tabs management and rendering to core
	* Added: "greaterThan" form validator
	* Added: Methods for fetching right / section and resp. required right from extension rights matrix
	* Added: TodoyuArray::implodeAssoc()
	* Added: TodoyuDateRange: setMinLength(), isOverlapping(), isInOneDay(), getOverlappingRange(), getAmountOfDays(), contains(), setRangeLimits()
	* Added: DialogChoice. Create a popup and creates options to get selected by user
	* Added: TodoyuArray::assureFromJSON() - Takes a JSON string, tries to decode it as an array and makes sure an array is return (even on invalid JSON)
	* Added: TodoyuRecordManager::deleteRecords() sets deleted flag for records in a table by where statement
	* Added: TodoyuTime::getWeekEndDayIndexes() - as in date('w'), depends in first day of week
	* Added: Call hook core.ac.selected and fire change event on AC element selection
	* Added: TodoyuDateRange::getLabelWithTime()
	* Added: Initialize fake console element to prevent errors on console.log() in not supporting browsers
	* Changed: Prevent selection of disabled select option